@@ -89,7 +89,7 @@ namespace Mono.CSharp {
 			28, 67, 78,
 			105, 108, 109, 114, 162, 164, 168, 169, 183, 184, 197,
 			219, 251, 252, 253, 278, 282,
-			419, 420, 429, 436, 440, 465, 467, 469,
+			419, 420, 429, 436, 440, 465, 467, 469, 472,
 			612, 618, 626, 628, 642, 649, 652, 658, 659, 660, 661, 665, 672, 675,
 			809,
 			1030,
